web/tests/k8s_test_setup/current/yaml/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-http-6515fb85
  namespace: gitlab
spec:
  rules:
  - host: tunnel-6515fb85.gitlab.svc
    http:
      paths:
      - backend:
          service:
            name: tunnel-6515fb85
            port:
              number: 80
        path: /
        pathType: Prefix
