web/tests/k8s_test_setup/current/yaml/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: ingress-https-6515fb85
  namespace: gitlab
spec:
  rules:
  - host: unity-6515fb85.gitlab.svc
    http:
      paths:
      - backend:
          service:
            name: unity-6515fb85
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: unicore-6515fb85.gitlab.svc
    http:
      paths:
      - backend:
          service:
            name: unicore-6515fb85
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - unity-6515fb85.gitlab.svc
    secretName: tls-unity-6515fb85
  - hosts:
    - unicore-6515fb85.gitlab.svc
    secretName: tls-gateway-6515fb85
