web/tests/k8s_test_setup/current/yaml/tls-gateway.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ4ekNDQXR1Z0F3SUJBZ0lVTDhobEM3YUtPb3g1THpadWR4eElsOEViSGlRd0RRWUpLb1pJaHZjTkFRRU4KQlFBd2dZa3hDekFKQmdOVkJBWVRBa1JGTVJ3d0dnWURWUVFJREJOT2IzSmtjbWhsYVc0dFYyVnpkR1poYkdWdQpNUkF3RGdZRFZRUUhEQWRLZFdWc2FXTm9NU2N3SlFZRFZRUUtEQjVHYjNKelkyaDFibWR6ZW1WdWRISjFiU0JLCmRXVnNhV05vSUVkdFlrZ3hEREFLQmdOVkJBc01BMHBUUXpFVE1CRUdBMVVFQXd3S2RHVnpkR2x1WnkxallUQWUKRncweU1qQXlNVEV4T1RJNE1qVmFGdzB5TXpBeU1URXhPVEk0TWpWYU1JR09NUXN3Q1FZRFZRUUdFd0pFUlRFYwpNQm9HQTFVRUNBd1RUb [...]
  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcEFJQkFBS0NBUUVBc1lsV3QvREoxbGpTdzZ2MHpKVU1RSkZMdklIR3kvcEFLL1dqTytwcFNOTUNHUmtaClVRdlJTOG1xS0Vrak1neEpNWDE2REdFVk9qUHZITnY1SXdOTTA1Q2lhT2hLVWR4MGNSWGtIOTVndjR0czA1WXIKUlJ1VlhhUHBzUzJoWml5SXFsSENQdjIwRXBKQ3MyOHJpSUZId2I0eU1vZkJvUU9DR0pjeTl3UnRrL0NFWnJpLwpEQzNaTHpOSVNXK1ZJemxCNVp1blJyMHkvdVVWb2FXbXlNd00zYVBPVUszNk1oNHRYR2lpbHB3eVA2T0k4MVV2CkRrNmF0ZFRrcmR1Z0hRRE5vTUtlMmJadEYyRTJDVnpKa1I1V1VlWWs4UmErTDgwZ2dHTTBIUm9KVjdaVSs4bmIKbThIdlpueUI3S [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: tls-gateway-6515fb85
  namespace: gitlab
type: kubernetes.io/tls
