web/tests/k8s_test_setup/current/yaml/unity.yaml
apiVersion:  v1
kind: Service
metadata:
  name: unity-6515fb85
  namespace: gitlab
spec:
  selector:
    app: unity-6515fb85
  type: ClusterIP
  ports:
    - name: ssl
      port: 443
      protocol: TCP
      targetPort: 2443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unity-6515fb85
  namespace: gitlab
spec:
  selector:
    matchLabels:
      app: unity-6515fb85
  template:
    metadata:
      labels:
        app: unity-6515fb85
    spec:
      securityContext:
        fsGroup: 100
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - env:
        - name: ADVERTISED_HOST
          value: unity-6515fb85.gitlab.svc
        - name: JHUB_CALLBACK_URLS_AS_LIST
          value: '["http://jupyterhub-6515fb85.gitlab.svc/hub/oauth_callback", "https://jupyterhub-6515fb85.gitlab.svc/hub/oauth_callback", "http://localhost:8000/hub/oauth_callback", "http://jupyterhub.gitlab.svc:8000/hub/oauth_callback"]'
        - name: DEBUG
          value: "true"
        image: registry.jsc.fz-juelich.de/jupyterjsc/k8s/images/unity-test-server:3.8.1-k8s-1
        imagePullPolicy: Always
        name: unity-6515fb85
        volumeMounts:
        - name: certs
          mountPath: /opt/unity/pki/ca-root.pem
          subPath: ca-root.pem
        - name: certs
          mountPath: /opt/unity/pki/unity-test-server.key
          subPath: unity.key
        - name: certs
          mountPath: /opt/unity/pki/unity-test-server.crt
          subPath: unity.crt
        - name: certs
          mountPath: /opt/unity/pki/demoKeystore.p12
          subPath: unity.p12
      volumes:
      - name: certs
        secret:
          defaultMode: 400
          secretName: certs-6515fb85
